--- a/views/sign-in.html
+++ b/views/sign-in.html
@@ -20,8 +20,17 @@
                     Sign in
                 </h2>
                 <form class="auth-area__form">
-
+                    <input type="email" name="email" id="email" placeholder="Email">
+                    <div class="auth-area__password">
+                        <input type="password" name="password" id="password" placeholder="Password">
+                        <img src="../assets/eye-slash.svg">
+                    </div>
+                    <input type="submit" id="image-button" value="Sign In"></input>
                 </form>
+                <a href="#">Forgot password?</a>
+                <p class="to-sign-up">
+                    Don’t have an account? <a href="#">Sign up</a>
+                </p>
             </div>
         </div>
     </div>
