--- a/styles/index.css
+++ b/styles/index.css
@@ -54,11 +54,12 @@ h2 {
     border-radius: 8px;
     font-size: 17px;
     margin-bottom: 37px;
+    background-color: white;
 }
 
 .auth-area__form input[type=submit] {
     margin-top: 23px;
-    width: 146px;
+    width: 140px;
     color: white;
     font-weight: 600;
     align-items: center;
@@ -104,6 +105,8 @@ h2 {
     .auth-area__form input {
         height: 40px;
         margin-bottom: 20px;
+        background-color: white;
+
     }
 
     .auth-area__password img {
