--- a/styles/index.css
+++ b/styles/index.css
@@ -1,10 +1,13 @@
 html {
     font-family: 'Poppins', sans-serif;
+    height: 100vh;
+
 }
 
 body {
     margin: 0;
     padding: 0;
+    height: 100%;
 }
 
 p {
@@ -12,8 +15,8 @@ p {
 }
 
 .wrapper {
-    height: 100vh;
     display: flex;
+    height: 100%;
 }
 
 .auth-area {
@@ -30,7 +33,7 @@ p {
 .background-img {
     flex: 0 1 1360px;
     background-image: url(../assets/bg.png);
-    background-size: auto 100%;
+    background-size: cover;
     background-repeat: no-repeat;
 }
 
@@ -126,13 +129,16 @@ h2 {
     }
 
     .background-img {
-        background-size: 100%;
+        position: absolute;
+        width: 100%;
+        height: 100%;
     }
 
     .auth-area {
-        position: absolute;
+        position: relative;
         left: 0;
         right: 0;
+        height: 100%;
         top: 74px;
         border-radius: 25px;
     }
