fix: center header and arrow on restore-password page

--- a/styles/restore-password.css
+++ b/styles/restore-password.css
@@ -51,6 +51,11 @@ h2 {
         margin-top: 20px;
     }
 
+    h2 {
+        margin-top: 22px;
+        padding-top: 0;
+    }
+
     .restore-note {
         margin-top: -3px;
         line-height: 20px;
