--- a/views/restore-password.html
+++ b/views/restore-password.html
@@ -10,7 +10,6 @@
 </head>
 <body>
     <div class="wrapper">
-        <div class="background-img"></div>
         <div class="auth-area">
             <div class="auth-area__wrapper">
                 <div class="header-wrapper">
@@ -24,7 +23,7 @@
             </p>
                 <form class="auth-area__form">
                     <input type="email" name="email" id="email" placeholder="Email">
-                    <input type="submit" id="image-button" value="Send Reset Link"></input>
+                    <button type="submit" id="image-button">Send Reset Link</button>
                 </form>
             </div>
         </div>
