--- a/views/sign-in.html
+++ b/views/sign-in.html
@@ -13,7 +13,6 @@
 </head>
 <body>
     <div class="wrapper">
-        <div class="background-img"></div>
         <div class="auth-area">
             <div class="auth-area__wrapper">
                 <h2>
@@ -25,7 +24,7 @@
                         <input type="password" name="password" id="password" placeholder="Password">
                         <img src="../assets/eye-slash.svg">
                     </div>
-                    <input type="submit" id="image-button" value="Sign In"></input>
+                    <button type="submit" id="image-button">Sign In</button>
                 </form>
                 <a href="#">Forgot password?</a>
                 <p class="to-sign-up">
