--- a/styles/index.css
+++ b/styles/index.css
@@ -14,27 +14,29 @@ p {
     color: #A1ABC9;
 }
 
+a {
+    color: #7297FF;
+}
+
 .wrapper {
     display: flex;
+    background-image: url(../assets/bg.png);
+    background-size: cover;
+    background-repeat: no-repeat;
     height: 100%;
 }
 
 .auth-area {
-    flex: 1 0 560px;
+    flex: 0 1 560px;
     background-color: #F9FAFF;
+    display: block;
+    margin-left: auto;
 }
 
 .auth-area__wrapper {
     margin: 0 auto;
     width: 368px;
     margin-top: 168px;
-}
-
-.background-img {
-    flex: 0 1 1360px;
-    background-image: url(../assets/bg.png);
-    background-size: cover;
-    background-repeat: no-repeat;
 }
 
 h2 {
@@ -60,9 +62,12 @@ h2 {
     background-color: white;
 }
 
-.auth-area__form input[type=submit] {
-    margin-top: 23px;
+.auth-area__form #image-button {
+    border: none;
+    font-size: 17px;
+    margin-top: 27px;
     width: 140px;
+    height: 56px;
     color: white;
     font-weight: 600;
     align-items: center;
@@ -77,11 +82,11 @@ h2 {
     text-transform: capitalize;
 }
 
-.auth-area__password img {
-    margin-left: -50px;
-    padding-top: 11px;
-    margin-bottom: -6px;
-} 
+@media (max-height: 1000px) {
+    .wrapper {
+        height: auto;
+    }
+}
 
 @media (max-width: 430px) {
     .auth-area__form {
@@ -97,9 +102,14 @@ h2 {
     .auth-area__wrapper {
         height: 100vh;
         margin-top: 32px;
+        padding-top: 11px;
     }
 
-    .auth-area input[type=submit] {
+    .wrapper {
+        height: auto;
+    }
+
+    .auth-area #image-button {
         height: 48px;
         margin-top: 7px;
         width: 125px;
@@ -114,10 +124,6 @@ h2 {
         font-size: 15px;
     }
 
-    .auth-area__password img {
-        margin-left: -40px;
-    }
-
     h2 {
         font-size: 20px;
         margin-bottom: 29px;
@@ -128,12 +134,6 @@ h2 {
         flex-direction: column;
     }
 
-    .background-img {
-        position: absolute;
-        width: 100%;
-        height: 100%;
-    }
-
     .auth-area {
         position: relative;
         left: 0;
@@ -141,5 +141,6 @@ h2 {
         height: 100%;
         top: 74px;
         border-radius: 25px;
+        margin-left: 0;
     }
 }
