--- a/styles/restore-password.css
+++ b/styles/restore-password.css
@@ -31,7 +31,7 @@ h2 {
     margin-top: 31px;
 }
 
-.auth-area__form input[type=submit] {
+.auth-area__form #image-button {
     margin-top: 27px;
     width: 214px;
     font-weight: 600;
@@ -62,7 +62,7 @@ h2 {
         width: 251px;
     }
     
-    .auth-area__form input[type=submit] {
+    .auth-area__form #image-button {
         margin-top: 10px;
         width: 201px;
     }
