--- a/styles/sign-in.css
+++ b/styles/sign-in.css
@@ -12,6 +12,13 @@ input#password {
     width: 303px;
     background-color: white;
 }
+
+.auth-area__password img {
+    margin-left: 326px;
+    position: absolute;
+    top: 448px;
+} 
+
 input {
     padding-left: 62px;
     letter-spacing: 0.8px;
@@ -31,6 +38,11 @@ input {
         padding-left: 50px;
     }
 
+    .auth-area__password img {
+        margin-left: -40px;
+        top: 204px;
+    }
+
     input#email {
         background: url(../assets/email.svg) no-repeat scroll 15px 10px;
         background-color: white;
@@ -47,7 +59,7 @@ input {
         height: 100vh;
     }
 
-    .auth-area input[type=submit] {
+    .auth-area #image-button {
         height: 48px;
         margin-top: 56px;
         width: 120px;
