--- a/styles/restore-password.css
+++ b/styles/restore-password.css
@@ -17,7 +17,7 @@ input {
     margin-top: 236px;
 }
 
-h2 {
+.header {
     padding-top: 12px;
     padding-left: 18px;
 }
@@ -51,7 +51,7 @@ h2 {
         margin-top: 20px;
     }
 
-    h2 {
+    .header {
         margin-top: 22px;
         padding-top: 0;
     }
