--- a/views/sign-up.html
+++ b/views/sign-up.html
@@ -15,7 +15,7 @@
     <div class="wrapper">
         <div class="auth-area">
             <div class="auth-area__wrapper">
-                <h2>
+                <h2 class="header">
                     Sign up
                 </h2>
                 <form class="auth-area__form">
