fix: place to-sign-in on bottom of the sign-in page using flex

--- a/styles/restore-password-msg.css
+++ b/styles/restore-password-msg.css
@@ -1,11 +1,8 @@
 .header-wrapper {
     display: flex;
+    align-items: center;
 }
 
-.header {
-    margin-top: 0;
-    padding-left: 19px;
-}
 
 .auth-area__wrapper {
     margin-top: 267px;
