--- a/styles/index.css
+++ b/styles/index.css
@@ -18,6 +18,10 @@ a {
     color: #7297FF;
 }
 
+.auth-area__wrapper a {
+    margin-top: 32px;
+}
+
 .wrapper {
     display: flex;
     background-image: url(../assets/bg.png);
@@ -29,7 +33,7 @@ a {
 .auth-area {
     flex: 0 1 560px;
     background-color: #F9FAFF;
-    display: block;
+    display: flex;
     margin-left: auto;
 }
 
@@ -37,6 +41,8 @@ a {
     margin: 0 auto;
     width: 368px;
     margin-top: 168px;
+    display: flex;
+    flex-direction: column;
 }
 
 .header {
