--- a/views/restore-password.html
+++ b/views/restore-password.html
@@ -13,7 +13,7 @@
         <div class="auth-area">
             <div class="auth-area__wrapper">
                 <div class="header-wrapper">
-                <a href="#"><img src="../assets/angle-left.svg" alt=""></a>
+                <a class="header-wrapper__link" href="#"><img src="../assets/angle-left.svg" alt=""></a>
                 <h2>
                     Restore password
                 </h2>
