fix: fix position of headers on restore-password and restore-password-msg pages

--- a/styles/restore-password-msg.css
+++ b/styles/restore-password-msg.css
@@ -1,6 +1,7 @@
 .header-wrapper {
     display: flex;
     align-items: center;
+    margin-bottom: 24px;
 }
 
 
@@ -14,6 +15,10 @@
     margin-top: -7px;
     line-height: 20px;
     font-size: 15px;
+}
+
+.header-wrapper h2 {
+    margin-left: 16px;
 }
 
 @media (max-width: 590px) {
