--- a/styles/restore-password.css
+++ b/styles/restore-password.css
@@ -3,6 +3,10 @@ input#email {
     background-color: white;
 }
 
+.wrapper {
+    height: 100%;
+}
+
 input {
     padding-left: 64px;
     letter-spacing: 0.8px;
@@ -11,6 +15,11 @@ input {
 .header-wrapper {
     display: flex;
     align-items: center;
+    margin-bottom: 24px;
+}
+
+.header-wrapper h2 {
+    margin-left: 16px;
 }
 
 .auth-area__wrapper {
