--- a/styles/restore-password-msg.css
+++ b/styles/restore-password-msg.css
@@ -21,6 +21,12 @@
     margin-left: 16px;
 }
 
+@media (max-height: 790px) {
+    .wrapper {
+        height: 100%;
+    }
+}
+
 @media (max-width: 590px) {
     .auth-area__wrapper {
         height: 100vh;
