--- a/views/sign-up.html
+++ b/views/sign-up.html
@@ -24,11 +24,11 @@
                     <input type="email" name="email" id="email" placeholder="Email">
                     <div class="auth-area__password">
                         <input type="password" name="password" id="password" placeholder="Password">
-                        <img id="password-eye" src="../assets/eye-slash.svg">
+                        <button id="password-eye"><img src="../assets/eye-slash.svg"></button>>
                     </div>
                     <div class="auth-area__password">
                         <input type="password" name="confirm-password" id="confirm-password" placeholder="Confirm Password">
-                        <img id="confirm-password-eye" src="../assets/eye-slash.svg">
+                        <button id="password-eye"><img src="../assets/eye-slash.svg"></button>
                     </div>
                     <button type="submit" id="image-button">Sign Up</button>
                 </form>
