--- a/views/sign-in.html
+++ b/views/sign-in.html
@@ -20,9 +20,11 @@
                 </h2>
                 <form class="auth-area__form">
                     <input type="email" name="email" id="email" placeholder="Email">
-                    <div class="auth-area__password">
+                    <div class="error-message">Email not found. Please check the spelling</div>
+                    <div class="auth-area__password error">
                         <input type="password" name="password" id="password" placeholder="Password">
-                        <img src="../assets/eye-slash.svg">
+                        <button><img src="../assets/eye-slash.svg"></button>
+                        <div class="error-message">Password contain unsupported characters</div>
                     </div>
                     <button type="submit" id="image-button">Sign In</button>
                 </form>
