--- a/views/sign-up.html
+++ b/views/sign-up.html
@@ -24,7 +24,7 @@
                     <input type="email" name="email" id="email" placeholder="Email">
                     <div class="auth-area__password">
                         <input type="password" name="password" id="password" placeholder="Password">
-                        <button id="password-eye"><img src="../assets/eye-slash.svg"></button>>
+                        <button id="password-eye"><img src="../assets/eye-slash.svg"></button>
                     </div>
                     <div class="auth-area__password">
                         <input type="password" name="confirm-password" id="confirm-password" placeholder="Confirm Password">
