--- a/styles/sign-in.css
+++ b/styles/sign-in.css
@@ -13,10 +13,16 @@ input#password {
   background-color: white;
 }
 
+.auth-area__password {
+    position: relative;
+    height: 56px;
+}
+
 .auth-area__password button {
-  margin-left: 326px;
-  position: absolute;
-  top: 455px;
+top: 50%;  
+position: absolute;
+right: 16px;
+    transform: translate(0%, -40%);
   border: none;
   background-color: transparent;
 }
@@ -46,6 +52,7 @@ input {
 
 .auth-area__form #image-button {
   margin-bottom: 32px;
+  margin-top: 64px;
 }
 
 .to-sign-up {
@@ -64,7 +71,7 @@ input {
   }
 
   .auth-area__password button {
-    top: 196px;
+    transform: translate(0%, -65%);
   }
 
   input#email {
@@ -111,7 +118,7 @@ input {
 @media (max-width: 430px) {
   form,
   input#password {
-    width: 202px;
+    width: 205px;
   }
 
   .auth-area__password button {
