--- a/styles/restore-password.css
+++ b/styles/restore-password.css
@@ -3,45 +3,13 @@ input#email {
     background-color: white;
 }
 
-.wrapper {
-    height: 100%;
-}
-
-input {
-    padding-left: 64px;
-    letter-spacing: 0.8px;
-} 
-
-.header-wrapper {
-    display: flex;
-    align-items: center;
-    margin-bottom: 24px;
-}
-
-.header-wrapper h2 {
-    margin-left: 16px;
-}
-
-.auth-area__wrapper {
-    margin-top: 236px;
-}
-
-.header {
-    padding-top: 12px;
-    padding-left: 18px;
-}
-
 .restore-note {
     font-size: 15px;
-    margin-top: -10px;
-}
-
-.auth-area__form {
-    margin-top: 40px;
+    margin: 0;
+    margin-bottom: 40px;
 }
 
 .auth-area__form #image-button {
-    margin-top: 27px;
     width: 214px;
     font-weight: 600;
 }
@@ -52,21 +20,11 @@ input {
         background-color: white;
     }
 
-    .auth-area__wrapper {
-        margin-top: 10px;
-    }
-
-    .auth-area__form {
-        margin-top: 20px;
-    }
-
     .header {
-        margin-top: 22px;
         padding-top: 0;
     }
 
     .restore-note {
-        margin-top: -3px;
         line-height: 20px;
         width: 251px;
     }
