--- a/views/restore-password-msg.html
+++ b/views/restore-password-msg.html
@@ -1,28 +1,29 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="../styles/index.css">
-    <link rel="stylesheet" href="../styles/restore-password-msg.css">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="../styles/index.css" />
+    <link rel="stylesheet" href="../styles/restore-password-msg.css" />
     <title>Document</title>
-</head>
-<body>
+  </head>
+  <body>
     <div class="wrapper">
-        <div class="auth-area">
-            <div class="auth-area__wrapper">
-                <div class="header-wrapper">
-                <a class="header-wrapper__link" href="#"><img src="../assets/angle-left.svg" alt=""></a>
-                <h2>
-                    Restore password
-                </h2>
-            </div>
-            <p class="restored-note">An email has been sent to <a href="mailto:example@exam.com">example@exam.com</a>.
-                Check your inbox, and click the reset link provided.
-            </p>
-            </div>
+      <div class="auth-area">
+        <div class="auth-area__wrapper">
+          <div class="header-wrapper header-wrapper__link">
+            <a href="#">
+                <h2>Restore password</h2>
+            </a>
+          </div>
+          <p class="restored-note">
+            An email has been sent to
+            <a href="mailto:example@exam.com">example@exam.com</a>. Check your
+            inbox, and click the reset link provided.
+          </p>
         </div>
+      </div>
     </div>
-</body>
+  </body>
 </html>
