--- a/styles/sign-up.css
+++ b/styles/sign-up.css
@@ -11,21 +11,11 @@ input#first-name, input#last-name {
 input#password {
     background: url(../assets/lock.svg) no-repeat scroll 22px 19px;
     background-color: white;
-    width: 306px;
-}
-
-#confirm-password-eye, #password-eye {
-    position: absolute;
-    margin-top: -81px;
-    margin-left: 326px;
-    border: none;
-    background-color: transparent;
 }
 
 input#confirm-password {
     background: url(../assets/check.svg) no-repeat scroll 22px 19px;
     background-color: white;
-    width: 306px;
 }
 
 input {
@@ -33,22 +23,18 @@ input {
     letter-spacing: 0.8px;
 } 
 
-.to-sign-in {
-    margin-top: 80px;
-}
-
 .to-sign-in a {
-    margin-left: 12px;
+    padding-left: 12px;
 }
 
 @media (max-width: 590px) {
+    .auth-area__input {
+        margin-bottom: 24px;
+    }
+
     input#first-name, input#last-name {
         background: url(../assets/user.svg) no-repeat scroll 15px 10px;
         background-color: white;
-    }
-
-    #confirm-password-eye, #password-eye {
-        margin-top: -54px;
     }
 
     input#email {
@@ -58,13 +44,11 @@ input {
 
     input#password {
         background: url(../assets/lock.svg) no-repeat scroll 15px 10px;
-        width: 318px;
         background-color: white;
     }
 
     input#confirm-password {
         background: url(../assets/check.svg) no-repeat scroll 15px 10px;
-        width: 318px;
         background-color: white;
     }
 
@@ -72,14 +56,8 @@ input {
         margin-top: 52px;
         width: 240px;
     }
+
+    .to-sign-in a {
+        padding: 0;
+    }
 }
-
-@media (max-width: 430px) {
-    input#password, input#confirm-password {
-        width: 206px;
-    }
-
-    #confirm-password-eye, #password-eye {
-        margin-left: 220px;
-    }
-} 
