--- a/views/restore-password.html
+++ b/views/restore-password.html
@@ -1,32 +1,34 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="../styles/index.css">
-    <link rel="stylesheet" href="../styles/restore-password.css">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="../styles/index.css" />
+    <link rel="stylesheet" href="../styles/restore-password.css" />
     <title>Document</title>
-</head>
-<body>
+  </head>
+  <body>
     <div class="wrapper">
-        <div class="auth-area">
-            <div class="auth-area__wrapper">
-                <div class="header-wrapper">
-                <a class="header-wrapper__link" href="#"><img src="../assets/angle-left.svg" alt=""></a>
-                <h2>
-                    Restore password
-                </h2>
+      <div class="auth-area">
+        <div class="auth-area__wrapper">
+          <div class="header-wrapper header-wrapper__link">
+            <a href="#">
+                <h2>Restore password</h2>
+            </a>
+          </div>
+          <p class="restore-note">
+            Please use your email address, and we’ll send you the link to reset
+            your password
+          </p>
+          <form class="auth-area__form">
+            <div class="auth-area__input">
+              <input type="email" name="email" id="email" placeholder="Email" />
             </div>
-            <p class="restore-note">Please use your email address, and we’ll 
-                send you the link to reset your password
-            </p>
-                <form class="auth-area__form">
-                    <input type="email" name="email" id="email" placeholder="Email">
-                    <button type="submit" id="image-button">Send Reset Link</button>
-                </form>
-            </div>
+            <button type="submit" id="image-button">Send Reset Link</button>
+          </form>
         </div>
+      </div>
     </div>
-</body>
+  </body>
 </html>
