--- a/views/sign-up.html
+++ b/views/sign-up.html
@@ -1,42 +1,75 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
-    <link rel="stylesheet" href="../styles/index.css">
-    <link rel="stylesheet" href="../styles/sign-up.css">
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,600;1,400&display=swap" rel="stylesheet">
-</head>
-<body>
+    <link rel="stylesheet" href="../styles/index.css" />
+    <link rel="stylesheet" href="../styles/sign-up.css" />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,600;1,400&display=swap"
+      rel="stylesheet"
+    />
+  </head>
+  <body>
     <div class="wrapper">
-        <div class="auth-area">
-            <div class="auth-area__wrapper">
-                <h2 class="header">
-                    Sign up
-                </h2>
-                <form class="auth-area__form">
-                    <input type="text" name="first-name" id="first-name" placeholder="First Name">
-                    <input type="text" name="last-name" id="last-name" placeholder="Last Name">
-                    <input type="email" name="email" id="email" placeholder="Email">
-                    <div class="auth-area__password">
-                        <input type="password" name="password" id="password" placeholder="Password">
-                        <button id="password-eye"><img src="../assets/eye-slash.svg"></button>
-                    </div>
-                    <div class="auth-area__password">
-                        <input type="password" name="confirm-password" id="confirm-password" placeholder="Confirm Password">
-                        <button id="password-eye"><img src="../assets/eye-slash.svg"></button>
-                    </div>
-                    <button type="submit" id="image-button">Sign Up</button>
-                </form>
-                <p class="to-sign-in">
-                    Already have an account? <a href="#">Sign in</a>
-                </p>
+      <div class="auth-area">
+        <div class="auth-area__wrapper">
+          <div class="header-wrapper">
+            <h2 class="header">Sign up</h2>
+          </div>
+          <form class="auth-area__form">
+            <div class="auth-area__input">
+              <input
+                type="text"
+                name="first-name"
+                id="first-name"
+                placeholder="First Name"
+              />
             </div>
+            <div class="auth-area__input">
+              <input
+                type="text"
+                name="last-name"
+                id="last-name"
+                placeholder="Last Name"
+              />
+            </div>
+            <div class="auth-area__input">
+              <input type="email" name="email" id="email" placeholder="Email" />
+            </div>
+            <div class="auth-area__input">
+              <input
+                type="password"
+                name="password"
+                id="password"
+                placeholder="Password"
+              />
+              <button id="password-eye">
+                <img src="../assets/eye-slash.svg" />
+              </button>
+            </div>
+            <div class="auth-area__input">
+              <input
+                type="password"
+                name="confirm-password"
+                id="confirm-password"
+                placeholder="Confirm Password"
+              />
+              <button id="password-eye">
+                <img src="../assets/eye-slash.svg" />
+              </button>
+            </div>
+            <button type="submit" id="image-button">Sign Up</button>
+          </form>
+          <p class="to-sign-in">
+            Already have an account? <a href="#">Sign in</a>
+          </p>
         </div>
+      </div>
     </div>
-</body>
-</html> 
+  </body>
+</html>
